--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,9 +1,11 @@
 pipeline{
   agent any  
-    tools{
-      maven 'Maven-mine'
-      jdk 'JDK11'
+   docker {
+      image 'maven:3.6.3-jdk-11'
+      args '-v /root/.m2:/root/.m2'
     }
+  }
+
   
   stages {
     stage('Build'){
